<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="No_thank_you">No, thanks</string>
    <string name="PrivacySettings_CCPAPermissionFootnote">"We and our partners may collect device information while you use this app. This information could be considered personal, and may include, but is not limited to, mobile advertising identifiers and location data, in order to offer personalized advertisements. This information sharing may be classified as a \"sale\" within the California Consumer Privacy Act, and you have the right to opt out if you wish. 

To opt out, please tap on the Personalized Ads toggle to disable it. Note that this means you will see advertisements that may not be as relevant to your interests. Please view our Privacy Policy if you would like to learn more about our information practices."</string>
    <string name="PrivacySettings_CCPAPermissionNavigationTitle">Do Not Sell My Info</string>
    <string name="PrivacySettings_DataPermission">Data Permission</string>
    <string name="PrivacySettings_DataPermissionDetail">For EU Privacy Rights</string>
    <string name="PrivacySettings_ForgetMeActionSheetCancel">Cancel</string>
    <string name="PrivacySettings_ForgetMeActionSheetTitle">Are you sure you want to be forgotten?</string>
    <string name="PrivacySettings_ForgetMeCellTitle">Forget Me</string>
    <string name="PrivacySettings_ForgetMeDataDeletedToastMessage">Data deleted</string>
    <string name="PrivacySettings_ForgetMeDataDeletingFailedPopUpActionTitle">OK</string>
    <string name="PrivacySettings_ForgetMeDataDeletingFailedPopUpMessage">Something went wrong. Please try again later.</string>
    <string name="PrivacySettings_ForgetMeDataDeletingFailedPopUpTitle">Cannot delete data</string>
    <string name="PrivacySettings_ForgetMeFootnote">"By tapping on the Forget Me button, your personal information associated with this device will be removed from our servers, but not from our advertising partners'. 

To remove your personal data shared with our advertising partners, please view our Privacy Policy / Partner List for instructions."</string>
    <string name="PrivacySettings_GDPRPermissionFootnote">General Data Protection Regulation offers our users the option to opt out of personalized advertising.</string>
    <string name="PrivacySettings_GDPRPermissionNavigationTitle">Data Permissions</string>
    <string name="PrivacySettings_PermissionCellTitle">Personalized Ads</string>
    <string name="PrivacySettings_PersonalInformation">Do Not Sell My Info</string>
    <string name="PrivacySettings_PersonalInformationDetail">For California Privacy Rights</string>
    <string name="PrivacySettings_PrivacyCellTitle">Privacy</string>
    <string name="PrivacySettings_PrivacyNavigationTitle">Privacy</string>
    <string name="PrivacySettings_PrivacyPolicy">Privacy Policy</string>
    <string name="PrivacySettings_SectionHeader">Privacy</string>
    <string name="PrivacySettings_SectionHeaderMiscellaneous">Miscellaneous</string>
    <string name="PrivacySettings_SectionHeaderPermissions">Permissions</string>
    <string name="PrivacySettings_SectionHeaderPersonal">Personal</string>
    <string name="PrivacySettings_SectionHeaderPrivacy">Privacy</string>
    <string name="PrivacySettings_TermsAndConditions">Terms and Conditions</string>
    <string name="Rate">Rate</string>
    <string name="Rate_x">Rate %1$s</string>
    <string name="Remind_me_later">Later</string>
    <string name="abbreviated_terminal">TER</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_my_flights">Add Flights</string>
    <string name="add_note">Add Flight Note</string>
    <string name="add_to_trip_popup_title">Add To Trip</string>
    <string name="ads_banner">/194563392/flighttracker_android_banner</string>
    <string name="ads_banner_amazon">55d1092f-e0f4-4f06-b551-13051b39cecd</string>
    <string name="ads_banner_applovin">0abbc99f0a61a04b</string>
    <string name="ads_interstitial_flightadded">/194563392/flighttracker_android_interstitial/flight_added</string>
    <string name="ads_interstitial_settings">/194563392/flighttracker_android_interstitial/settings</string>
    <string name="ads_interstitial_startup">/194563392/flighttracker_android_interstitial/startup</string>
    <string name="ads_interstitial_startup_amazon">a61e6bd4-237f-4770-ade0-cf91c66ce95e</string>
    <string name="ads_interstitial_startup_applovin">4c8fafc690bc86d9</string>
    <string name="ads_native_airline_details">/194563392/flightboard_native</string>
    <string name="ads_native_airline_list">/194563392/flighttracker_android_native_airlinelist</string>
    <string name="ads_native_airline_list_searchflight">/194563392/flighttracker_android_native_airlines_search_results</string>
    <string name="ads_native_airport_details">/194563392/flightboard_native</string>
    <string name="ads_native_airport_list">/194563392/flighttracker_android_native_airportlist</string>
    <string name="ads_native_airport_list_searchflight">/194563392/flighttracker_android_native_airports_search_results</string>
    <string name="ads_native_flight_details">/194563392/flighttracker_android_native_flightdetails</string>
    <string name="ads_native_myflights">/194563392/flighttracker_android_native_myflights</string>
    <string name="ads_native_recent_search">/194563392/flighttracker_android_native_recentsearch</string>
    <string name="ads_native_search_results">/194563392/flighttracker_android_native_searchflightlist</string>
    <string name="advertisement_removed">Ads Removed!</string>
    <string name="ago">ago</string>
    <string name="aircraftDetails.crew.title">Crew</string>
    <string name="aircraftDetails.engine.title">Engine</string>
    <string name="aircraftDetails.height.title">Height</string>
    <string name="aircraftDetails.length.title">Length</string>
    <string name="aircraftDetails.range.title">Range</string>
    <string name="aircraftDetails.seatCapacity.title">Seat capacity</string>
    <string name="aircraftDetails.speed.title">Speed</string>
    <string name="airline_details_fragment_title">Airline Details</string>
    <string name="airline_info_carrier_main">Main Carrier</string>
    <string name="airline_info_carrier_sub">Sub Carrier</string>
    <string name="airlines.title">@string/dictionary_airline</string>
    <string name="airplane_details_disclaimer">This aircraft may not represent the carrier</string>
    <string name="airplane_details_specifications">SPECIFICATIONS</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="compensation_claim_cta">Claim</string>
    <string name="compensation_claim_description">This flight was delayed and is eligible for compensation. Would you like to claim your compensation?</string>
    <string name="compensation_claim_never_again">"Don't show again"</string>
    <string name="compensation_claim_title">Flight Delay Compensation</string>
    <string name="details_airplane_title">Airplane Info</string>
    <string name="details_button_info">INFO</string>
    <string name="details_button_map">MAP</string>
    <string name="details_button_navigation">Nav</string>
    <string name="details_button_website">Website</string>
    <string name="dismiss">Dismiss</string>
    <string name="flight_tracker_widget">Flight Tracker Widget</string>
    <string name="retrieve_flights">Retrieve Flights</string>
    <string name="retrieve_old_flights">Retrieve old flights</string>
    <string name="settings_calendar_subtitle">Sync your flights to Calendar</string>
    <string name="settings_calendar_title">Auto add flights to Calendar</string>
    <string name="settings_category_alert_flightstatus_changes">Flight Status Changes</string>
    <string name="settings_category_alert_notifications_category_title">Show notifications for:</string>
    <string name="settings_category_alert_reset">Use Default Alert Settings</string>
    <string name="settings_category_alert_travel_reminders">Travel reminders</string>
    <string name="settings_category_application_clear_summary">Clears your recent searches.</string>
    <string name="settings_category_application_maptype_title">Select Map Type</string>
    <string name="settings_category_application_title">Application Settings</string>
    <string name="settings_category_privacy_category_title">@string/settings_category_privacy_title</string>
    <string name="settings_category_privacy_privacypolicy_summary">https://impalastudios.com/inappprivacy</string>
    <string name="settings_category_privacy_termsnconditions_summary">https://impalastudios.com/inappterms</string>
    <string name="settings_category_privacy_title">Privacy Settings</string>
    <string name="settings_category_tripit_autoimport_title">Auto Import</string>
    <string name="settings_category_tripit_import_title">Import flights</string>
    <string name="settings_faq_title">Frequently Asked Questions</string>
    <string name="settings_layover_summary">Show Layovers for tracked Flights</string>
    <string name="settings_layover_title">Show Layovers</string>
    <string name="settings_licensing_summary">Licenses for included libraries</string>
    <string name="settings_licensing_title">License Information</string>
    <string name="settings_subscribe_summary">Gain access to premium features!</string>
    <string name="settings_subscribe_title">Subscribe</string>
    <string name="settings_trips_summary">Show My Trips at the top of My Flights</string>
    <string name="settings_trips_title">Show My Trips</string>
    <string name="subtext_status_updates">Get notified about any flight changes</string>
    <string name="trip_details_menu_changephoto">Change Cover Photo</string>
    <string name="trip_details_menu_deletetrip">Delete Trip</string>
    <string name="trip_details_menu_renametrip">Rename Trip</string>
    <string name="widget_config_selectflighthint">Select a Flight from your list</string>
    <string name="widget_trackflight_button">TRACK A FLIGHT</string>
</resources>