<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="#fff3faff" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="@style/NativeAd.Title" android:id="@id/compensation_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="24.0dip" android:text="@string/compensation_claim_title" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textAppearance="@style/NativeAd.Description" android:id="@id/compensation_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/compensation_claim_description" android:layout_marginEnd="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/compensation_title" app:layout_constraintTop_toBottomOf="@id/compensation_title" />
    <Button android:id="@id/compensation_neveragain" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/compensation_claim_never_again" app:layout_constraintBottom_toBottomOf="@id/compensation_cta" app:layout_constraintEnd_toStartOf="@id/compensation_cta" style="@style/Widget.AppCompat.Button.Borderless.Colored" />
    <Button android:id="@id/compensation_cta" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/compensation_claim_cta" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/compensation_description" style="@style/Widget.AppCompat.Button.Borderless.Colored" />
</androidx.constraintlayout.widget.ConstraintLayout>
