<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:id="@id/root" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/textView4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/retrieve_old_flights" android:layout_marginStart="16.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/imageView5" app:layout_constraintTop_toTopOf="parent" />
    <Button android:id="@id/button6" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginBottom="8.0dip" android:text="@string/dismiss" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/button7" style="@style/Widget.AppCompat.Button.Borderless.Colored" />
    <Button android:id="@id/button7" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginBottom="8.0dip" android:text="@string/retrieve_flights" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />
    <ImageView android:id="@id/imageView5" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginStart="16.0dip" app:layout_constraintBottom_toTopOf="@id/button6" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/textView4" app:srcCompat="@drawable/ic_warning" />
</androidx.constraintlayout.widget.ConstraintLayout>
