<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:textSize="14.0sp" android:textStyle="normal" android:textColor="#ff4285f4" android:gravity="center_horizontal" android:id="@id/details_website_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/details_button_website" android:drawablePadding="8.0dip" android:fontFamily="sans-serif" android:drawableTint="@color/details_action_button_icon_color" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/button2" app:layout_constraintTop_toTopOf="@id/button2" style="@style/Widget.AppCompat.Button.Borderless" />
    <Button android:textSize="14.0sp" android:textStyle="normal" android:textColor="#ff4285f4" android:gravity="center_horizontal" android:id="@id/details_direction_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/details_button_navigation" android:drawablePadding="8.0dip" android:fontFamily="sans-serif" android:drawableTint="@color/details_action_button_icon_color" app:layout_constraintEnd_toStartOf="@id/button" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/details_info_button" app:layout_constraintTop_toTopOf="@id/details_info_button" style="@style/Widget.AppCompat.Button.Borderless" />
    <Button android:textSize="14.0sp" android:textStyle="normal" android:textColor="#ff4285f4" android:gravity="center_horizontal" android:id="@id/details_info_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/details_button_info" android:drawablePadding="8.0dip" android:fontFamily="sans-serif" android:drawableTint="@color/details_action_button_icon_color" app:layout_constraintEnd_toStartOf="@id/details_direction_button" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="spread" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Widget.AppCompat.Button.Borderless" />
    <Button android:textSize="14.0sp" android:textStyle="normal" android:textColor="#ff4285f4" android:gravity="center_horizontal" android:id="@id/button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/details_button_map" android:drawablePadding="8.0dip" android:fontFamily="sans-serif" android:drawableTint="@color/details_action_button_icon_color" app:layout_constraintEnd_toStartOf="@id/details_website_button" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/details_direction_button" app:layout_constraintTop_toTopOf="@id/details_direction_button" style="@style/Widget.AppCompat.Button.Borderless" />
</androidx.constraintlayout.widget.ConstraintLayout>
