<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="#ff122f4e" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="34.0dip" app:srcCompat="@mipmap/ic_launcher" />
    <TextView android:textSize="26.0sp" android:textStyle="normal" android:textColor="#ffffffff" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/flight_tracker_widget" android:fontFamily="sans-serif-light" android:letterSpacing="-0.02" />
    <TextView android:textSize="14.0sp" android:textStyle="normal" android:textColor="#ff95abc4" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="20.0dip" android:text="@string/widget_config_selectflighthint" android:textAllCaps="true" android:fontFamily="sans-serif" android:letterSpacing="-0.02" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/emptyView" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:id="@id/emptyViewImage" android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_no_flights" />
        <TextView android:textSize="18.0sp" android:textStyle="normal" android:textColor="#ff95abc4" android:gravity="center_horizontal" android:id="@id/emptyViewText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:fontFamily="sans-serif" android:letterSpacing="-0.02" />
        <Button android:textColor="#ffffffff" android:id="@id/emptyViewButton" android:layout_width="222.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/widget_trackflight_button" app:backgroundTint="#ff4b94e4" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/widget_config_flightlist" android:layout_width="wrap_content" android:layout_height="fill_parent" />
</LinearLayout>
