<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/airplane_details_image" android:layout_width="fill_parent" android:layout_height="225.0dip" />
            <androidx.appcompat.widget.Toolbar android:background="@drawable/fullscreen_gradient" android:layout_width="fill_parent" android:layout_height="100.0dip" app:contentInsetStart="0.0dip">
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_optimizationLevel="direct|barrier|chains|dimensions">
                    <ImageView android:id="@id/back_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:tint="#ffffffff" android:layout_marginStart="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.13" app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
                    <TextView android:textSize="20.0sp" android:textStyle="normal" android:textColor="#ffffffff" android:id="@id/toolbarTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/details_airplane_title" android:fontFamily="sans-serif-medium" android:layout_marginStart="24.0dip" app:layout_constraintBottom_toBottomOf="@id/back_arrow" app:layout_constraintStart_toEndOf="@id/back_arrow" app:layout_constraintTop_toTopOf="@id/back_arrow" />
                    <ImageView android:id="@id/favorite_button" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintBottom_toBottomOf="@id/toolbarTitle" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/toolbarTitle" app:srcCompat="@android:drawable/ic_menu_share" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_optimizationLevel="direct|barrier|chains|dimensions">
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff4a4a4a" android:id="@id/airplane_details_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="46.0dip" android:textAllCaps="true" android:fontFamily="sans-serif" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="14.0sp" android:textStyle="normal" android:textColor="#ffb0bac6" android:gravity="end" android:id="@id/airplane_disclaimer" android:layout_width="wrap_content" android:layout_height="19.0dip" android:layout_marginTop="8.0dip" android:text="@string/airplane_details_disclaimer" android:fontFamily="sans-serif" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="15.0sp" android:textStyle="normal" android:textColor="#ff4a4a4a" android:id="@id/airplane_details_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:fontFamily="sans-serif" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/airplane_details_title" app:layout_constraintTop_toBottomOf="@id/airplane_details_title" />
            <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ff4a4a4a" android:id="@id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/airplane_details_specifications" android:fontFamily="sans-serif" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="@id/airplane_details_description" app:layout_constraintTop_toBottomOf="@id/airplane_details_description" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/detailsAttributes" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/textView8" app:layout_constraintTop_toBottomOf="@id/textView8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
